--- a/application-tests/application-tests.csproj
+++ b/application-tests/application-tests.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>application_tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-	  <RootNamespace>DietApp.Tests.Application</RootNamespace>
+	 <RootNamespace>DietApp.Tests.Application</RootNamespace>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
@@ -23,5 +23,9 @@
   <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\application\application.csproj" />
+		<ProjectReference Include="..\Class_lib\core.csproj" />
+	</ItemGroup>
 
 </Project>
